vertically center the button arrows
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk@112777 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/ArticleCreationWorkflow/modules/ext.articleCreation.core/ext.articleCreation.core.css
+++ b/extensions/ArticleCreationWorkflow/modules/ext.articleCreation.core/ext.articleCreation.core.css
@@ -55,9 +55,12 @@
 /* Power Arrows */
 
 .ac-arrow {
-	float: right;
+	position: absolute;
+	top: 50%;
+	right: 16px;
 	width: 16px;
 	height: 16px;
+	margin-top: -9px;
 }
 
 .ac-arrow-forward {
