enable arrows on buttons to point either forward or back
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk@112778 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/ArticleCreationWorkflow/modules/ext.articleCreation.core/ext.articleCreation.core.css
+++ b/extensions/ArticleCreationWorkflow/modules/ext.articleCreation.core/ext.articleCreation.core.css
@@ -67,6 +67,10 @@
 	/* @embed */
 	background: url(images/arrow_right.png) no-repeat;
 }
+.ac-arrow-back {
+	/* @embed */
+	background: url(images/arrow_left.png) no-repeat;
+}
 
 /* Tooltip Magic */
 
