change random and home buttons to links
there is no reason these should rely on javascript
this makes the site more accessible to those without js



git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk@112809 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/MobileFrontend/stylesheets/beta_common.css
+++ b/extensions/MobileFrontend/stylesheets/beta_common.css
@@ -653,11 +653,13 @@ html[dir="rtl"] #languageselection {
 	display: inline-block;
 }
 
+#nav .button,
 #nav button {
 	background: url(images/buttonbg.gif) no-repeat center;
 	border: 0;
-	height: 23px;
-	width: 83px;
+	padding: 8px;
+	color: black;
+	display: inline-block;
 }
 
 #disableButtons {
