override the padding for large buttons to accomodate the buttons arrows we use in ACW
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk@112869 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/ArticleCreationWorkflow/modules/ext.articleCreation.core/ext.articleCreation.core.css
+++ b/extensions/ArticleCreationWorkflow/modules/ext.articleCreation.core/ext.articleCreation.core.css
@@ -16,7 +16,10 @@
 
 /* Buttons */
 .ac-article-button {
-	width: 250px !important;
+	width: 220px !important;
+}
+.ui-button-large {
+	padding: 5px 35px 7px 5px !important;
 }
 
 .ac-action-button {
