make sure toggling is enabled
some older browsers 
e.g. nokia e63 do not support various operations
for getting elements
see http://www.quirksmode.org/m/w3c_core.html

currently using document.querySelectorAll
which means for these browsers sections will be hidden
but no buttons added
this change checks for this situation
making sure the information is still accessible

going forward to support toggling on these browses
we could add the Sizzle library but it would increase the size of the page



git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk@112886 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/MobileFrontend/stylesheets/common.css
+++ b/extensions/MobileFrontend/stylesheets/common.css
@@ -334,12 +334,12 @@ button.show {
 	display: none;
 }
 
-.jsEnabled button.show {
+.togglingEnabled button.show {
 	display: inline-block;
 }
 
-.jsEnabled .content_block,
-.jsEnabled .section_anchors,
+.togglingEnabled .content_block,
+.togglingEnabled .section_anchors,
 button.section_heading.hide {
 	display: none;
 }
