empty palm_pre stylesheet
definitions are now redundant with recent
styling changes



git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk@112892 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/MobileFrontend/stylesheets/palm_pre.css
+++ b/extensions/MobileFrontend/stylesheets/palm_pre.css
@@ -1,28 +1,1 @@
-#searchbox {
-	height: 25px;
-}
-
-#searchbox #logo {
-	display: block;
-	float: left;
-	margin-right: 4px;
-}
-
-#searchbox #searchField {
-	border: 1px solid grey;
-	height: 20px;
-}
-
-#searchbox #clearButton {
-	display: block;
-}
-
-#nav {
-	height: 23px;
-}
-
-body {
-	font-size: 14px;
-}
-
-
+/* empty */
