[CentralAuth] Refactor JS * Prefix variable definitions with 'var'. Previously `methodHint` was occupying the global namespace ("ack" search reveals no usage of this stuff in ./trunk/phase3 or ./trunk/extensions other than this dir) * Remove wg prefix of the variable to avoid confusion with wiki globals * Binding hideMethodHint directly to methodHint.onclick. No need to set an attribute and let eval()-behavior on a javascript string * Using ResourceLoader module messages (and client side: mw.msg and mw.message), instead of exposing a global in javascript with pre-processed raw html (wfMsgWikiHtml). * Remove redundant hideMethodHint * Fix onclick="showMethodHint('{$method}')" by using a data attribute and binding a delegated event handler on the container and showing the method hint that way * Hiding the (?) with CSS if javascript isn't running * Clean up JS to use mw and jQuery, adding nice little fadeIn/Out to the hint bubble, and re-using the same hint element instead of re-creating it * Other mis
* Fixes:
-- Bug 34915 - Uncaught ReferenceError: showMethodHint is not defined
-- Bug 34916 - Port CentralAuth to use ResourceLoader
* Pokes: r112925, r112926

git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk@112930 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/CentralAuth/modules/ext.centralauth.css
+++ b/extensions/CentralAuth/modules/ext.centralauth.css
@@ -12,3 +12,8 @@
 .merge-method-help-name {
 	font-weight: bold;
 }
+
+/* Hide them when javascript fails or isn't enabled */
+.client-nojs .mw-centralauth-wikislist .merge-method-help {
+	display: none;
+}
