--- a/extensions/MobileFrontend/stylesheets/beta_common.css
+++ b/extensions/MobileFrontend/stylesheets/beta_common.css
@@ -197,7 +197,7 @@ a.external {
 	top: 35px;
 }
 
-#search {
+.search_bar .search {
 	width: 90%;
 	-webkit-appearance: none;
 	border-top-width: 0px;
@@ -568,6 +568,7 @@ img.thumbborder {
 	left: 5px;
 }
 
+#zero-language-search.search_bar,
 #searchbox {
 	width: auto;
 	position: relative;
@@ -577,6 +578,10 @@ img.thumbborder {
 	-moz-border-radius: 2px;
 }
 
+#zero-language-search.search_bar {
+	padding: 8px 32px 8px 0px;
+}
+
 #searchbox #form {
 	padding-right: 34px;
 	width: 100%;
@@ -584,13 +589,13 @@ img.thumbborder {
 }
 
 html[dir="rtl"] #logo,
-#goButton {
+.goButton {
 	position: absolute;
 	right: 2px;
 	left: auto;
 }
 
-#goButton {
+.goButton {
 	top: 2px;
 	border: 0;
 	background: url(images/s.gif) no-repeat top left;
@@ -598,9 +603,10 @@ html[dir="rtl"] #logo,
 	height: 25px;
 	width: 27px;
 	padding-bottom: 0;
+	text-indent: 999px;
 }
 
-html[dir="rtl"] #goButton {
+html[dir="rtl"] .goButton {
 	right: auto;
 	left: 2px;
 }
@@ -749,7 +755,7 @@ html[dir="rtl"] .full-screen-search #sq {
 }
 
 .full-screen-search #logo,
-.full-screen-search #goButton {
+.full-screen-search .goButton {
 	display: none;
 }
 
