--- a/extensions/SideBarMenu/css/ext.sidebarmenu.css
+++ b/extensions/SideBarMenu/css/ext.sidebarmenu.css
@@ -4,10 +4,14 @@
     padding: 5px;
     float: left;
     clear: left;
+    margin: 5px;
 }
 
 .sidebar-menu-item-collapsed  .sidebar-menu{
     display: none;
+}
+.sidebar-menu-item-expanded {
+    display: block;
 }
 
 .sidebar-menu-0,.sidebar-menu-1{
@@ -42,9 +46,13 @@
 
 .sidebar-menu-item-controls{
     float: right;
-    margin-left: 5px;
     color: #0645AD;
     cursor: pointer;
+    min-width: 45px;
+    text-align: right;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
 }
 
 .sidebar-menu-item-1{
