did some final polishing
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk@113255 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/SideBarMenu/css/ext.sidebarmenu.css
+++ b/extensions/SideBarMenu/css/ext.sidebarmenu.css
@@ -11,7 +11,7 @@
     display: none;
 }
 .sidebar-menu-item-expanded {
-    display: block;
+    display: list-item;
 }
 
 .sidebar-menu-0,.sidebar-menu-1{
