--- a/extensions/MobileFrontend/stylesheets/beta_common.css
+++ b/extensions/MobileFrontend/stylesheets/beta_common.css
@@ -666,6 +666,7 @@ html[dir="rtl"] #languageselection {
 	padding: 8px;
 	color: black;
 	display: inline-block;
+	background-size: 100% 100%;
 }
 
 #disableButtons {
