--- a/extensions/MobileFrontend/stylesheets/common.css
+++ b/extensions/MobileFrontend/stylesheets/common.css
@@ -678,6 +678,7 @@ html[dir="rtl"] #languageselection {
 	padding: 8px;
 	color: black;
 	display: inline-block;
+	background-size: 100% 100%;
 }
 
 #disableButtons {
